force-app/main/default/objects/Contact/fields/maica__Age_Group__c.field-meta.xml
<CustomField>
    <fullName>maica__Age_Group__c</fullName>
    <formula>IF(ISBLANK(Birthdate), &quot;No Birthdate&quot;,
IF((TODAY() - Birthdate) / 365 &lt; 10, &quot;Under 10&quot;,
IF((TODAY() - Birthdate) / 365 &lt; 20, &quot;10-19&quot;, 
IF((TODAY() - Birthdate) / 365 &lt; 30, &quot;20-29&quot;, 
IF((TODAY() - Birthdate) / 365 &lt; 40, &quot;30-39&quot;, 
IF((TODAY() - Birthdate) / 365 &lt; 50, &quot;40-49&quot;, 
IF((TODAY() - Birthdate) / 365 &lt; 60, &quot;50-59&quot;, 
IF((TODAY() - Birthdate) / 365 &lt; 70, &quot;60-69&quot;, 
IF((TODAY() - Birthdate) / 365 &gt;= 70, &quot;70+&quot;, 
&quot;N/A&quot;)))))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Age Group</label>
    <type>Text</type>
</CustomField>