force-app/main/default/objects/Contact/fields/maica__Call_Business_Hours__c.field-meta.xml
<CustomField>
    <fullName>maica__Call_Business_Hours__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Call Business Hours</label>
    <type>Checkbox</type>
</CustomField>