force-app/main/default/objects/Contact/fields/maica__Contact_Type__c.field-meta.xml
<CustomField>
    <fullName>maica__Contact_Type__c</fullName>
    <label>Contact Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Client</fullName>
            </value>
            <value>
                <fullName>Participant Carer</fullName>
            </value>
            <value>
                <fullName>Guardian</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>