force-app/main/default/objects/Contact/fields/maica__Country_of_Birth__c.field-meta.xml
<CustomField>
    <fullName>maica__Country_of_Birth__c</fullName>
    <label>Country of Birth</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>maica__Countries</valueSetName>
    </valueSet>
</CustomField>