force-app/main/default/objects/Contact/fields/maica__Date_of_Death__c.field-meta.xml
<CustomField>
    <fullName>maica__Date_of_Death__c</fullName>
    <label>Date of Death</label>
    <type>Date</type>
</CustomField>