force-app/main/default/objects/Contact/fields/maica__Ethnicity__c.field-meta.xml
<CustomField>
    <fullName>maica__Ethnicity__c</fullName>
    <label>Ethnicity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>maica__Ethnicity</valueSetName>
    </valueSet>
</CustomField>