force-app/main/default/objects/Contact/fields/maica__Gender__c.field-meta.xml
<CustomField>
    <fullName>maica__Gender__c</fullName>
    <label>Gender</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>maica__Gender</valueSetName>
    </valueSet>
</CustomField>