force-app/main/default/objects/Contact/fields/maica__Indigenous_Status__c.field-meta.xml
<CustomField>
    <fullName>maica__Indigenous_Status__c</fullName>
    <label>Indigenous Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>maica__Indigenous_Status</valueSetName>
    </valueSet>
</CustomField>