force-app/main/default/objects/Contact/fields/maica__LGA__c.field-meta.xml
<CustomField>
    <fullName>maica__LGA__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Local Government Area the Contact is located in.</description>
    <inlineHelpText>The Local Government Area the Contact is located in.</inlineHelpText>
    <label>LGA</label>
    <referenceTo>maica__LGA__c</referenceTo>
    <relationshipLabel>Contacts</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>