force-app/main/default/objects/Contact/fields/maica__MMM_Classification__c.field-meta.xml
<CustomField>
    <fullName>maica__MMM_Classification__c</fullName>
    <description>The Modified Monash Model (MMM) defines whether the Contact resides in a city, rural, remote or very remote location.</description>
    <inlineHelpText>The Modified Monash Model (MMM) defines whether the Contact resides in a city, rural, remote or very remote location.</inlineHelpText>
    <label>MMM Classification</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>maica__MMM_Classification</valueSetName>
    </valueSet>
</CustomField>