force-app/main/default/objects/Contact/fields/maica__NDIS_Number__c.field-meta.xml
<CustomField>
    <fullName>maica__NDIS_Number__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>NDIS Number</label>
    <length>9</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>