force-app/main/default/objects/Contact/fields/maica__PHN__c.field-meta.xml
<CustomField>
    <fullName>maica__PHN__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Primary Health Network the Contact is located in.</description>
    <inlineHelpText>The Primary Health Network the Contact is located in.</inlineHelpText>
    <label>PHN</label>
    <referenceTo>maica__PHN__c</referenceTo>
    <relationshipLabel>Contacts</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>