force-app/main/default/objects/Contact/fields/maica__Plan_Manager2__c.field-meta.xml
<CustomField>
    <fullName>maica__Plan_Manager2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Plan Manager</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Contacts</relationshipLabel>
    <relationshipName>Participants</relationshipName>
    <type>Lookup</type>
</CustomField>