force-app/main/default/objects/Contact/fields/maica__Plan_Manager__c.field-meta.xml
<CustomField>
    <fullName>maica__Plan_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>DEPRECATED</description>
    <inlineHelpText>DEPRECATED</inlineHelpText>
    <label>(DEPRECATED) Plan Manager</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Contacts</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>