force-app/main/default/objects/Contact/fields/maica__Preferred_Contact_Method__c.field-meta.xml
<CustomField>
    <fullName>maica__Preferred_Contact_Method__c</fullName>
    <label>Preferred Contact Method</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Face to Face</fullName>
            </value>
            <value>
                <fullName>Home Phone</fullName>
            </value>
            <value>
                <fullName>Letter</fullName>
            </value>
            <value>
                <fullName>Mobile Phone</fullName>
            </value>
            <value>
                <fullName>Other Phone</fullName>
            </value>
            <value>
                <fullName>SMS/Text</fullName>
            </value>
            <value>
                <fullName>Work Phone</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>