force-app/main/default/objects/Contact/fields/maica__Preferred_Pronoun__c.field-meta.xml
<CustomField>
    <fullName>maica__Preferred_Pronoun__c</fullName>
    <description>I like people to know that I identify as:</description>
    <inlineHelpText>I like people to know that I identify as:</inlineHelpText>
    <label>Preferred Pronoun</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>maica__Pronoun</valueSetName>
    </valueSet>
</CustomField>