force-app/main/default/objects/Contact/fields/maica__Primary_Language__c.field-meta.xml
<CustomField>
    <fullName>maica__Primary_Language__c</fullName>
    <label>Primary Language</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>maica__Languages</valueSetName>
    </valueSet>
</CustomField>