force-app/main/default/objects/Contact/fields/maica__SMS_Opt_Out__c.field-meta.xml
<CustomField>
    <fullName>maica__SMS_Opt_Out__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SMS Opt Out</label>
    <type>Checkbox</type>
</CustomField>