force-app/main/default/objects/Contact/fields/maica__Under_18__c.field-meta.xml
<CustomField>
    <fullName>maica__Under_18__c</fullName>
    <description>Indicates if the Contact is under 18 years of age.</description>
    <formula>IF(ISNULL(maica__Age__c), FALSE, IF(maica__Age__c &lt; 18, TRUE, FALSE))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Indicates if the Contact is under 18 years of age.</inlineHelpText>
    <label>Under 18</label>
    <type>Checkbox</type>
</CustomField>